Create Record Page

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -4,4 +4,33 @@
 
 @tailwind components;
 
+
+.form-label {
+    @apply text-sm text-gray-800;
+}
+
+.form-heading {
+    @apply text-gray-600 text-lg;
+}
+
+.form-sub-heading {
+    @apply text-gray-500 text-xs;
+}
+
+.is-invalid {
+    @apply border border-red-600;
+}
+
+.btn {
+    @apply transition ease-in-out font-semibold py-2 px-5 rounded;
+}
+
+.btn-primary {
+    @apply text-white bg-primary-800;
+}
+
+.btn-primary:hover {
+    @apply bg-primary-700;
+}
+
 @tailwind utilities;
